# commits_django

./: manage.py  pyproject.toml
commits_django/: asgi.py  settings.py  urls.py  wsgi.py
