[tool.poetry]
name = "commits-django"
version = "0.1.0"
description = ""
authors = ["dany-herz42 <danyherzdev@gmail.com>"]
readme = "README.md"
packages = [{include = "commits_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
